--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                   <div class="">
                       {% for post in posts_sell %}
                     <div class="search-result-item">
-                    <a href="{% url 'post-detail' post.id %}">
+                    <a href="{% url 'post-detail' post.slug %}">
                       <h4>{{ post.title }}</h4>
                       <ul class="blog-info"><li><i class="fa fa-calendar"></i> {{ post.created_date }}</li> <li><i class="fa fa-dollar"></i> {{ post.get_prices_display }}</li>                        <li><i class="fa fa-envelope"></i> Verified </li>
                         <li><i class="fa fa-phone"></i> Verified </li>
@@ -91,7 +91,7 @@
                   <div class="">
  {% for post in posts_buy %}
                     <div class="search-result-item">
-                    <a href="{% url 'post-detail' post.id %}">
+                    <a href="{% url 'post-detail' post.slug %}">
                       <h4>{{ post.title }}</h4>
                       <ul class="blog-info"><li><i class="fa fa-calendar"></i> {{ post.created_date }}</li> <li><i class="fa fa-dollar"></i> {{ post.get_prices_display }}</li>                        <li><i class="fa fa-envelope"></i> Verified </li>
                         <li><i class="fa fa-phone"></i> Verified </li>
