--- a/templates/posts/my-interest.html
+++ b/templates/posts/my-interest.html
@@ -28,7 +28,7 @@
             <li class="pull-right"><i class="fa fa-tag"></i> {{ post.tags.all|join:", " }}</li>
           </ul>
           <p>{{ post.description }}<span class="label label-success "> New </span></a>
-          <div class="posting-icon">  <a href="#" class="red"><i class="fa fa-bitbucket"></i> Delete</a> </div>
+          <div class="posting-icon">  <a href="{% url 'delete-interest' post.slug %}" class="red"><i class="fa fa-bitbucket"></i> Delete</a> </div>
         </div>
     {% endfor %}
         <div class="row margin-top-15">
