--- a/templates/index.html
+++ b/templates/index.html
@@ -25,13 +25,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-9">
-        <form action="#" class="content-search-view2">
+        <form class="content-search-view2" action="{% url 'search' %}" method="get">
           <div class="input-group">
-              <form action="{% url 'search' %}" method="get">
             <input type="text" class="form-control" placeholder="Search..." id="search" name="search">
             <span class="input-group-btn">
             <button type="submit" class="btn btn-primary">Search</button>
-                </form>
             </span> </div>
         </form>
       </div>
