--- a/templates/search.html
+++ b/templates/search.html
@@ -27,7 +27,7 @@
       <div class="col-md-9">
         <form action="{% url 'search' %}" method="get" class="content-search-view2">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search..." id="search" name="search">
+            <input type="text" class="form-control" placeholder="Search..." id="search" name="search" value="{{ request.GET.search }}">
             <span class="input-group-btn">
             <button type="submit" class="btn btn-primary">Search</button>
             </span> </div>
@@ -67,7 +67,7 @@
                       <h4>{{ post.title }}</h4>
                       <ul class="blog-info"><li><i class="fa fa-calendar"></i> {{ post.created_date }}</li> <li><i class="fa fa-dollar"></i> {{ post.get_prices_display }}</li>                        <li><i class="fa fa-envelope"></i> Verified </li>
                         <li><i class="fa fa-phone"></i> Verified </li>
-                        <li class="pull-right"><i class="fa fa-list"></i> {{ post.category }}</li>
+                        <li class="pull-right"><i class="fa fa-list"></i> {{ post.category }}jbjjkbkj</li>
                         <li class="pull-right"><i class="fa fa-tag"></i>{{ post.tags.all|join:", " }}</li>
                       </ul>
                       <p>{{ post.description }}
