--- a/templates/posts/my-posting.html
+++ b/templates/posts/my-posting.html
@@ -53,7 +53,7 @@
             <li class="pull-right"><i class="fa fa-tag"></i> {{ post.tags.all|join:", " }}</li>
           </ul>
           <p>{{ post.description }} {% if today_date == post.expiry_date %}<span class="label label-danger "> Expired </span>{% endif %}</a>
-          <div class="posting-icon"> <a href="{% url 'edit-post' post.id %}?redirect=true" class="green pull-left"><i class="fa fa-edit"></i> Edit</a>  <a href="{% url 'delete-post' post.id %}" class="red"><i class="fa fa-bitbucket"></i> Delete</a> </div>
+          <div class="posting-icon"> <a href="{% url 'edit-post' post.id %}?redirect=true" class="green pull-left"><i class="fa fa-edit"></i> Edit</a>  <a class="red" onclick="showinterest({{ post.id }})"><i class="fa fa-bitbucket"></i> Delete</a> </div>
         </div>
         {% endfor %}
 
@@ -86,4 +86,19 @@
   <!-- BEGIN SIDEBAR & CONTENT -->
 
 </div>
+{% endblock %}
+{% block extra_scripts %}
+    <script>
+function showinterest(slug) {
+    var x;
+    if (confirm("Are you sure you want delete the post?") == true) {
+        x = "You pressed OK!";
+        window.location.href = "/post-delete/" + slug + "/"
+    } else {
+        x = "You pressed Cancel!";
+    }
+    document.getElementById("demo").innerHTML = x;
+}
+</script>
+
 {% endblock %}
