--- a/templates/posts/job-detail-after-login.html
+++ b/templates/posts/job-detail-after-login.html
@@ -46,7 +46,7 @@
 
                     <a href="#" class="btn btn-primary"  data-rel="fancybox-button" >You have Reached Your Interest Limit</a>
                       {% else %}
-                          <a href="#" class="fancybox-button btn btn-primary"  data-rel="fancybox-button" onclick="showinterest(3000)">Show Interest</a>
+                          <a href="#" class="btn btn-primary"  data-rel="fancybox-button" onclick="showinterest(3000)">Show Interest</a>
                       {% endif %}
                   </blockquote>
                 </div>
@@ -91,7 +91,7 @@
                 {% if tracker.interest_count == plan.plan.show_interest %}
                     <a href="#" class="btn btn-primary"  data-rel="fancybox-button" >You have Reached Your Interest Limit</a>
                       {% else %}
-                          <a href="#" class="fancybox-button btn btn-primary"  data-rel="fancybox-button" onclick="showinterest(3000)">Show Interest</a>
+                          <a href="#" class="btn btn-primary"  data-rel="fancybox-button" onclick="showinterest(3000)">Show Interest</a>
                       {% endif %}
               </blockquote>
             </div>
