--- a/templates/posts/update-post.html
+++ b/templates/posts/update-post.html
@@ -93,7 +93,7 @@
                 </fieldset>
                 <div class="row">
                   <div class="col-lg-6 col-md-offset-4 padding-top-20">
-                    <button type="submit" class="btn btn-primary">Save & Publish</button>
+                    <button type="submit" class="btn btn-primary">Submit</button>
                     <button type="button" class="btn btn-default">Cancel</button>
                   </div>
                 </div>
