--- a/templates/posts/category-posts.html
+++ b/templates/posts/category-posts.html
@@ -47,7 +47,7 @@
                   <div class="">
                       {% for post in posts %}
                     <div class="search-result-item">
-                    <a href="{% url 'post-detail' post.id %}">
+                    <a href="{% url 'post-detail' post.slug %}">
                       <h4>{{ post.title }}</h4>
                       <ul class="blog-info"><li><i class="fa fa-calendar"></i> {{ post.created_date }}</li> <li><i class="fa fa-dollar"></i> {{ post.get_prices_display }}</li>                        <li><i class="fa fa-envelope"></i> Verified </li>
                         <li><i class="fa fa-phone"></i> Verified </li>
