js files for tagging

--- a/templates/posts/my-posting-detail.html
+++ b/templates/posts/my-posting-detail.html
@@ -3,9 +3,9 @@
     <div class="main" xmlns="http://www.w3.org/1999/html">
   <div class="container ">
 <!-- BEGIN CONTENT -->
-  {% for message in messages %}
-      <span style="color:green">{{ message }}</span>
-  {% endfor %}
+{#  {% for message in messages %}#}
+{#      <span style="color:green">{{ message }}</span>#}
+{#  {% endfor %}#}
       <div class="content-page">
         <div class="row margin-bottom-30 search-result-item border-box">
           <!-- BEGIN INFO BLOCK -->
