--- a/templates/posts/my-posting.html
+++ b/templates/posts/my-posting.html
@@ -32,7 +32,7 @@
             <li class="pull-right"><i class="fa fa-tag"></i> {{ post.tags.all|join:", " }}</li>
           </ul>
           <p>{{ post.description }} <span class="label label-success "> New </span></a>
-          <div class="posting-icon"> <a href="{% url 'edit-post' post.id %}?redirect=true" class="green pull-left"><i class="fa fa-edit"></i> Edit</a>  <a href="{% url 'delete-post' post.id %}" class="red"><i class="fa fa-bitbucket"></i> Delete</a> </div>
+          <div class="posting-icon"> <a href="{% url 'edit-post' post.id %}?redirect=true" class="green pull-left"><i class="fa fa-edit"></i> Edit</a>  <a onclick="showinterest({{ post.id }})" class="red"><i class="fa fa-bitbucket"></i> Delete</a> </div>
         </div>
     {% endfor %}
 
