js files for tagging

--- a/templates/posts/job-detail-contact-info.html
+++ b/templates/posts/job-detail-contact-info.html
@@ -97,8 +97,7 @@ Click here to send your contact detail to user, to show your interest, user will
 </ul>
 
 <p>And many more.......</p>
-<h3 class="margin-bottom-30">Upload Document: Non
-</h3>
+<a target="_blank" href="{{ post.file.url }}"><h3 class="margin-bottom-30">Uploaded Document: Non </h3></a>
 </div></div>
 
 
