--- a/templates/posts/my-posting-detail.html
+++ b/templates/posts/my-posting-detail.html
@@ -59,6 +59,7 @@
                 {% endif %}
 
               <hr>
+            <a target="_blank" href="{{ post.file.url }}"><h3 class="margin-bottom-30">Uploaded Document: Non </h3></a>
             </div>
 
           </div>
