js files for tagging

--- a/templates/posts/my-interest-detail.html
+++ b/templates/posts/my-interest-detail.html
@@ -62,8 +62,7 @@
 </ul>
 
 <p>And many more.......</p>
-<h3 class="margin-bottom-30">Upload Document: Non
-</h3>
+    <a target="_blank" href="{{ post.file.url }}"><h3 class="margin-bottom-30">Uploaded Document: Non </h3></a>
 </div></div>
 
 
