--- a/templates/posts/post-detail.html
+++ b/templates/posts/post-detail.html
@@ -49,6 +49,7 @@
               <hr>
               <h5 class="margin-bottom-10">Contact Viewed By: {{ contact_count }} persons</h5>
               <h3>Interest Shown By: {{ interest_count }} persons</h3>
+                <a target="_blank" href="{{ post.file.url }}"><h3 class="margin-bottom-30">Uploaded Document: Non </h3></a>
             </div>
           </div>
           <div class="row front-lists-v1  ">
