--- a/templates/posts/job-detail-contact-info.html
+++ b/templates/posts/job-detail-contact-info.html
@@ -97,7 +97,9 @@ Click here to send your contact detail to user, to show your interest, user will
 </ul>
 
 <p>And many more.......</p>
-<a target="_blank" href="{{ post.file.url }}"><h3 class="margin-bottom-30">Uploaded Document: Non </h3></a>
+{% if post.file %}
+              <a target="_blank" href="{{ post.file.url }}"><h3 class="margin-bottom-30">Uploaded Document: Non </h3></a>
+                {% endif %}
 </div></div>
 
 
