--- a/templates/posts/my-interest-detail.html
+++ b/templates/posts/my-interest-detail.html
@@ -65,7 +65,10 @@
 </ul>
 
 <p>And many more.......</p>
-    <a target="_blank" href="{{ post.file.url }}"><h3 class="margin-bottom-30">Uploaded Document: Non </h3></a>
+
+    {% if post.file %}
+              <a target="_blank" href="{{ post.file.url }}"><h3 class="margin-bottom-30">Uploaded Document: Non </h3></a>
+                {% endif %}
 </div></div>
 
 
