--- a/templates/posts/my-interest.html
+++ b/templates/posts/my-interest.html
@@ -23,8 +23,8 @@
           <ul class="blog-info">
             <li><i class="fa fa-calendar"></i> {{ post.created_date|date }}</li>
             <li><i class="fa fa-dollar"></i> {{ post.get_prices_display }}</li>
-            <li><i class="fa fa-envelope"></i> {% if user.email_verify == True %}Verified{% else %}Not Verified{% endif %} </li>
-            <li><i class="fa fa-phone"></i> {% if user.mobile_verify == True %}Verified{% else %}Not Verified{% endif %} </li>
+            <li><i class="fa fa-envelope"></i> {% if post.user.user_profiles.email_verify == True %}Verified{% else %}Not Verified{% endif %} </li>
+            <li><i class="fa fa-phone"></i> {% if post.user.user_profiles.mobile_verify == True %}Verified{% else %}Not Verified{% endif %} </li>
             <li class="pull-right"><i class="fa fa-list"></i> {{ post.category }}</li>
             <li class="pull-right"><i class="fa fa-tag"></i> {{ post.tags.all|join:", " }}</li>
           </ul>
